--- a/src/app.css
+++ b/src/app.css
@@ -23,6 +23,7 @@
 
 /* Prevent text selection during dragging */
 body {
+    background-color: black;
     -webkit-user-select: none;
     user-select: none;
     overscroll-behavior: contain;
