--- a/src/app.css
+++ b/src/app.css
@@ -23,7 +23,7 @@
 
 /* Prevent text selection during dragging */
 body {
-    background-color: black;
+    background-color: rgb(21, 21, 29);
     -webkit-user-select: none;
     user-select: none;
     overscroll-behavior: contain;
